--- a/crate.html
+++ b/crate.html
@@ -56,8 +56,8 @@
 						// use of RoughnessMipmapper is optional
 						const roughnessMipmapper = new RoughnessMipmapper( renderer );
 
-						const loader = new GLTFLoader().setPath( 'models/gltf/DamagedHelmet/glTF/' );
-						loader.load( 'DamagedHelmet.gltf', function ( gltf ) {
+						const loader = new GLTFLoader().setPath( 'models/gltf/crate/' );
+						loader.load( 'crate.gltf', function ( gltf ) {
 
 							gltf.scene.traverse( function ( child ) {
 
